--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <div class="landing-header">
         <img src="spotify.png" alt="spotify logo" class="logo" />
         <div id="title">
-            <span>Spotify Quizzer App</span>
+            <span>Spotistatify</span>
         </div>
-        <h2>By: Rowan Dillon</h2>
+        <h2>A music stats quiz app by Rowan Dillon</h2>
         <h4><a href="https://github.com/Rowan7401">github.com/Rowan7401</a></h4>
     </div>
     <div class="dashboard">
@@ -35,6 +35,10 @@
         <div class="artist-detail">
             <div id="artist-detail"></div>
         </div>
+
+        <div class="album-detail">
+            <div id="album-detail"></div>
+        </div>
         
         <div class="chooseGame">
             <header class="prompts" id="prompt">
@@ -43,8 +47,8 @@
             <div class="gameModes">
                 <button type="button" class="hot-streak-btn" id="hsbtn">Hot Streak</button>
                 <h5>Fast paced. 33s to answer! Get as many qs correct in a row for the best streak!</h5>
-                <!-- <button type="button" class="hot-streak-btn" id="hlbtn">Higher or Lower</button>
-                <h5>Guess higher or lower on statistics!</h5> -->
+                <button type="button" class="hot-streak-btn" id="hlbtn">Higher or Lower</button>
+                <h5>Guess higher or lower on statistics! Get as many correct in row! No time limit</h5>
                 <button type="button" class="hot-streak-btn" id="testbtn">Full Test</button>
                 <h5>How well do you know the artist? Quiz yourself on all artists statistical endpoints! No time limit</h5>
             </div>
