--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             <div class="gameModes">
                 <button type="button" class="hot-streak-btn" id="hsbtn">Hot Streak</button>
                 <h5>Fast paced. 33s to answer! Get as many qs correct in a row for the best streak!</h5>
-                <button type="button" class="hot-streak-btn" id="hlbtn">Higher or Lower</button>
-                <h5>Guess higher or lower on statistics! Get as many correct in row! No time limit</h5>
+                <!-- <button type="button" class="hot-streak-btn" id="hlbtn">Higher or Lower</button>
+                <h5>Guess higher or lower on statistics! Get as many correct in row! No time limit</h5> -->
                 <button type="button" class="hot-streak-btn" id="testbtn">Full Test</button>
                 <h5>How well do you know the artist? Quiz yourself on all artists statistical endpoints! No time limit</h5>
             </div>
