added favicon support

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Spotify Stats Quiz App</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
+    <link rel="icon" type="image/png" href="spotifyfavicon.png">
 </head>
 
 <body>
